--- a/Backtest/config.ini
+++ b/Backtest/config.ini
@@ -5,6 +5,13 @@ Symbols = ['USDJPY']
 Time_STR = "2022.01.04"
 Time_END = "2024.06.30"
 
+[STR01_USDJPY_H1]
+testmodel = '0'
+Terms = ['H1'] 
+Symbols = ['USDJPY']
+Time_STR = "2020.01.04"
+Time_END = "2024.06.30"
+
 [STR02]
 testmodel = '0'
 Terms = ['H1'] 
