--- a/Optimization/config.ini
+++ b/Optimization/config.ini
@@ -2,14 +2,22 @@
 testmodel = '0'
 Terms = ['H1'] 
 Symbols = ['USDJPY','EURJPY']
-Time_STR = "2020.01.04"
+Time_STR = "2021.01.04"
 Time_END = "2024.05.30"
-TestPeriod_month = 3
+TestPeriod_month = 1
 
-[STR02]
-testmodel = '1'
+[STR01_USDJPY_H1]
+testmodel = '0'
 Terms = ['H1'] 
 Symbols = ['USDJPY']
-Time_STR = "2016.01.04"
-Time_END = "2022.04.30"
-TestPeriod_month = 6
+Time_STR = "2021.01.04"
+Time_END = "2024.05.30"
+TestPeriod_month = 1
+
+[STR02]
+testmodel = '0'
+Terms = ['H1'] 
+Symbols = ['USDJPY']
+Time_STR = "2021.01.04"
+Time_END = "2024.08.30"
+TestPeriod_month = 1
