--- a/Optimization/config.ini
+++ b/Optimization/config.ini
@@ -1,9 +1,9 @@
 [STR01]
 testmodel = '0'
 Terms = ['H1'] 
-Symbols = ['USDJPY','EURJPY']
+Symbols = ['USDJPY']
 Time_STR = "2021.01.04"
-Time_END = "2024.05.30"
+Time_END = "2025.03.30"
 TestPeriod_month = 1
 
 [STR01_USDJPY_H1]
