Backtestの仕様を変更

--- a/Backtest/config.ini
+++ b/Backtest/config.ini
@@ -1,20 +1,19 @@
 [STR01]
 testmodel = '0'
-Terms = ['H1'] 
+Terms = ['M30'] 
 Symbols = ['USDJPY']
-Time_STR = "2022.01.04"
-Time_END = "2024.06.30"
 
 [STR01_USDJPY_H1]
 testmodel = '0'
 Terms = ['H1'] 
 Symbols = ['USDJPY']
-Time_STR = "2020.01.04"
-Time_END = "2024.06.30"
+
+[STR01_USDJPY_M30]
+testmodel = '0'
+Terms = ['M30'] 
+Symbols = ['USDJPY']
 
 [STR02]
 testmodel = '0'
 Terms = ['H1'] 
 Symbols = ['USDJPY']
-Time_STR = "2020.01.04"
-Time_END = "2022.04.30"
